# ScorpionQML

./: CMakeLists.txt  ScorpionQmake.pro  ScorpionQmake.pro.user.6826f86  ScorpionQmake.pro.user.df1fa4f  main.cpp  main.qml  qml.qrc
cpp_files/: debug.cpp  debug.h
cpp_files/engine_manager/: CMakeLists.txt  enginemanager.cpp  enginemanager.hpp
cpp_files/ide/global_definitons/include/: GlobalDefinitions.hpp  IdeObject.hpp  SingletonTraits.hpp  singletonTreats.hpp
cpp_files/ide/global_definitons/src/: GlobalDefinitions.cpp  IdeObject.cpp
cpp_files/ide/main_manager/include/: EngineManager.hpp  MainManager.hpp  ManagersExecuter.hpp  NonQtActionsWrapper.hpp  includeArea.hpp  mainmanager.hpp  mainmanager_notifier.hpp  mainmanagerconnectionscreator.hpp  managers_executer.hpp  nonqtactionswrapper.hpp  qobject_adapter.hpp
cpp_files/ide/main_manager/src/: EngineManager.cpp  MainManager.cpp  ManagersExecuter.cpp  NonQtActionsWrapper.cpp  mainmanager.cpp  mainmanager_notifier.cpp  managers_executer.cpp  (+3 more)
cpp_files/windows_managers/: CMakeLists.txt
cpp_files/windows_managers/start_windows_manager/: CMakeLists.txt  startwindowsmanager.cpp
cpp_files/windows_managers/windows_manager_base/: CMakeLists.txt  windowsmanager_base.cpp
qml_files/: main.qml
qml_files/start_window/: StartWindow.qml
qml_files/windows/start_windows/: StartWindow.qml
windows_manager/: CMakeLists.txt
windows_manager/start_windows_manager/: startwindowmanager.hpp
windows_manager/windows_manager_base/: windowmanager_base.cpp
windows_managers/: CMakeLists.txt
windows_managers/start_windows_manager/: StartWindow.qml
windows_managers/windows_manager_base/: CmakeLists.txt
(+89 files in other folders)
